<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linearlayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bluesky1600"
    android:orientation="horizontal" >

   

    <EditText
        android:id="@+id/location"
        android:layout_width="160dp"
        android:layout_height="30dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="5dp"
        android:background="@drawable/edittext"
        android:maxLength="100"
        android:ems="6"
        android:hint="@string/edit_message" >

        <requestFocus />
    </EditText>
    
     

     <RadioGroup
         android:id="@+id/radio_weather"
         android:layout_marginTop="7dp"
         android:layout_width="wrap_content" 
         android:layout_height="wrap_content"
         android:layout_alignParentTop="true"
         android:layout_toRightOf="@+id/location"
         android:orientation="horizontal" >

         <RadioButton
             android:id="@+id/fahrenheit"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:checked="true"
             android:onClick="radioone"
             android:text="@string/radioone"
             android:textColor="#FFF" />

         <RadioButton
             android:id="@+id/celsius"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:onClick="radiotwo"
             android:text="@string/radiotwo"
             android:textColor="#FFF" />

     </RadioGroup>
     <Button
        android:id="@+id/button1"
        android:layout_width="90dp"
        android:layout_height="40dp"
        android:layout_marginTop="5dp"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:onClick="sendMessage"
        android:text="@string/button_send" />

     <TextView
         android:id="@+id/city"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_below="@+id/button1"
         android:layout_centerHorizontal="true"
         android:textColor="#ffffff" />
          
 <!-- android:layout_marginTop="31dp"  android:layout_toRightOf="@+id/location" -->

     <TextView
         android:id="@+id/region"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_centerHorizontal="true"
         android:layout_below="@+id/city"
         android:textAppearance="?android:attr/textAppearanceSmall"
         android:textColor="#ffffff" />

      <ImageView
          android:id="@+id/imageid"
          android:contentDescription="@string/content"
          android:layout_width="30dp"
          android:layout_height="30dp"
          android:layout_below="@+id/region"
          
          android:layout_centerHorizontal="true"
          android:drawablePadding="5dp"
          android:scaleType="fitXY"
          android:layout_marginTop="12dp" 
          android:singleLine="true" />

      <TextView
          android:id="@+id/condition"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_centerHorizontal="true"
          android:layout_below="@+id/imageid"
          android:textColor="#ffffff"
          android:textAppearance="?android:attr/textAppearanceSmall" />
      
      <TextView
          android:id="@+id/temperature"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_centerHorizontal="true"
          android:layout_below="@+id/condition"
          android:textColor="#ffffff"
          android:textAppearance="?android:attr/textAppearanceSmall" />
      
      <TextView
          android:id="@+id/forecast"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_marginLeft="10dp"
          android:layout_marginTop="10dp"
          android:layout_below="@+id/temperature"
          android:text="@string/forecast"
          android:textColor="#ffffff"
          android:textAppearance="?android:attr/textAppearanceSmall" />
      
      
    <TableLayout android:id="@+id/TableLayout01" android:layout_marginTop="30dp" android:layout_marginLeft="10dp" android:layout_marginRight="10dp" android:shrinkColumns="*"   android:stretchColumns="*" android:layout_centerHorizontal="true" android:layout_below="@+id/temperature" android:layout_width="wrap_content" android:layout_height="wrap_content">
	<TableRow android:id="@+id/TableRow"  android:background="#C5C5C5" android:layout_width="wrap_content" android:layout_height="wrap_content"  >
 
	    <TextView android:id="@+id/Day" android:layout_gravity="center" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/Day"></TextView>
	    <TextView android:id="@+id/Weather" android:layout_gravity="center" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/Weather"></TextView>
 		<TextView android:id="@+id/High" android:layout_gravity="center" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/High"></TextView>
 		<TextView android:id="@+id/Low" android:layout_gravity="center" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/Low"></TextView>
 	</TableRow>
 	<TableRow android:id="@+id/TableRow01"  android:background="#FFFFFF" android:layout_width="wrap_content" android:layout_height="wrap_content">
 
	    <TextView android:id="@+id/Dayr1" android:layout_gravity="center"  android:layout_width="wrap_content" android:layout_height="wrap_content" ></TextView>
	    <TextView android:id="@+id/Weatherr1" android:layout_gravity="center" android:layout_width="wrap_content" android:layout_height="wrap_content" ></TextView>
 		<TextView android:id="@+id/Highr1" android:layout_gravity="center" android:textColor="#EFC323" android:layout_width="wrap_content" android:layout_height="wrap_content" ></TextView>
 		<TextView android:id="@+id/Lowr1" android:layout_gravity="center" android:textColor="#51AAFB" android:layout_width="wrap_content" android:layout_height="wrap_content" ></TextView>
 	</TableRow>
 	<TableRow android:id="@+id/TableRow02"  android:background="#E1FFFF" android:layout_width="wrap_content" android:layout_height="wrap_content">
	    <TextView android:id="@+id/Dayr2" android:layout_gravity="center" android:layout_width="wrap_content" android:layout_height="wrap_content" ></TextView>
	    <TextView android:id="@+id/Weatherr2" android:layout_gravity="center" android:layout_width="wrap_content" android:layout_height="wrap_content" ></TextView>
 		<TextView android:id="@+id/Highr2" android:layout_gravity="center" android:textColor="#EFC323" android:layout_width="wrap_content" android:layout_height="wrap_content" ></TextView>
 		<TextView android:id="@+id/Lowr2" android:layout_gravity="center" android:textColor="#51AAFB" android:layout_width="wrap_content" android:layout_height="wrap_content" ></TextView>
 	</TableRow>
	<TableRow android:id="@+id/TableRow03"  android:background="#FFFFFF" android:layout_width="wrap_content" android:layout_height="wrap_content">
 
	    <TextView android:id="@+id/Dayr3" android:layout_gravity="center" android:layout_width="wrap_content" android:layout_height="wrap_content" ></TextView>
	    <TextView android:id="@+id/Weatherr3" android:layout_gravity="center" android:layout_width="wrap_content" android:layout_height="wrap_content" ></TextView>
 		<TextView android:id="@+id/Highr3" android:layout_gravity="center" android:textColor="#EFC323" android:layout_width="wrap_content" android:layout_height="wrap_content" ></TextView>
 		<TextView android:id="@+id/Lowr3" android:layout_gravity="center" android:textColor="#51AAFB" android:layout_width="wrap_content" android:layout_height="wrap_content" ></TextView>
 	</TableRow>
 	<TableRow android:id="@+id/TableRow04"  android:background="#E1FFFF" android:layout_width="wrap_content" android:layout_height="wrap_content">
 
	    <TextView android:id="@+id/Dayr4" android:layout_gravity="center" android:layout_width="wrap_content" android:layout_height="wrap_content" ></TextView>
	    <TextView android:id="@+id/Weatherr4" android:layout_gravity="center" android:layout_width="wrap_content" android:layout_height="wrap_content" ></TextView>
 		<TextView android:id="@+id/Highr4" android:layout_gravity="center" android:textColor="#EFC323" android:layout_width="wrap_content" android:layout_height="wrap_content" ></TextView>
 		<TextView android:id="@+id/Lowr4" android:layout_gravity="center" android:textColor="#51AAFB" android:layout_width="wrap_content" android:layout_height="wrap_content" ></TextView>
 	</TableRow>
	
 	<TableRow android:id="@+id/TableRow05"  android:background="#FFFFFF" android:layout_width="wrap_content" android:layout_height="wrap_content">
 
	    <TextView android:id="@+id/Dayr5" android:layout_gravity="center" android:layout_width="wrap_content" android:layout_height="wrap_content" ></TextView>
	    <TextView android:id="@+id/Weatherr5" android:layout_gravity="center" android:layout_width="wrap_content" android:layout_height="wrap_content" ></TextView>
 		<TextView android:id="@+id/Highr5" android:layout_gravity="center" android:textColor="#EFC323" android:layout_width="wrap_content" android:layout_height="wrap_content" ></TextView>
 		<TextView android:id="@+id/Lowr5" android:layout_gravity="center" android:textColor="#51AAFB" android:layout_width="wrap_content" android:layout_height="wrap_content" ></TextView>
 	</TableRow>
	
 	</TableLayout>

    
   <TextView
          android:id="@+id/currentweather"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_marginLeft="10dp"
          android:layout_marginTop="10dp"
          android:layout_below="@+id/TableLayout01"
          android:text="@string/currentweather"
          android:textColor="#ffffff"
          android:onClick="currentweather"
          android:clickable="true"
          android:textAppearance="?android:attr/textAppearanceSmall" />
   
   
   <TextView
          android:id="@+id/weatherforecast"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_marginLeft="10dp"
          android:layout_marginTop="20dp"
          android:layout_below="@+id/currentweather"
          android:text="@string/weatherforecast"
          android:textColor="#ffffff"
          android:onClick="weatherforecast"
          android:clickable="true"
          android:textAppearance="?android:attr/textAppearanceSmall" />
   
    
      
 
</RelativeLayout>